<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddStoryActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <TextView
            android:id="@+id/test_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            card_view:cardCornerRadius="16dp"
            card_view:cardPreventCornerOverlap="false">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription,ImageContrastCheck"
                tools:src="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linear_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/card"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_galeri"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:backgroundTint="?attr/customBackgroundColorButton"
                android:text="@string/gallery"
                android:textColor="?attr/customTextColorButton"
                android:textSize="25sp"
                app:cornerRadius="10dp"
                app:strokeColor="?attr/customStrokeColor"
                app:strokeWidth="2dp"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:backgroundTint="?attr/customBackgroundColorButton"
                android:text="@string/camera"
                android:textColor="?attr/customTextColorButton"
                android:textSize="25sp"
                app:cornerRadius="10dp"
                app:strokeColor="?attr/customStrokeColor"
                app:strokeWidth="2dp"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/cb_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            android:background="@drawable/rounded_bg"
            app:layout_constraintTop_toBottomOf="@id/linear_button"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textColor="?attr/customTextColorButton"
                    android:textStyle="bold"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/customTextColorButton"
                    android:text="@string/desc_location"
                    android:textSize="18sp" />
            </LinearLayout>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:trackTint="@drawable/track_tint"
                app:thumbTint="@drawable/thumb_tint"
                android:thumb="@drawable/thumb_selector"
                app:track="@drawable/track_selector"/>
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shipper_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_location">

            <EditText
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="top"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:padding="15dp"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/circle"
            android:elevation="8dp"
            android:padding="20dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:indeterminateTint="?attr/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/progress"
                android:layout_centerInParent="true"
                android:text="@string/loading"
                android:textColor="?attr/customColorText" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>