<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        card_view:cardBackgroundColor="?attr/customBottomSheetBackground"
        card_view:cardCornerRadius="4dp"
        card_view:strokeColor="@color/transparent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_item_user"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:transitionName="profile"
                card_view:cardCornerRadius="25dp"
                card_view:cardPreventCornerOverlap="false">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="?attr/colorPrimary"
                    android:contentDescription="@string/todo"
                    android:padding="8dp"
                    android:src="@drawable/baseline_person_24"
                    tools:ignore="ImageContrastCheck" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="32dp"
                android:paddingBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingTop="8dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:id="@+id/detail_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:text="@string/todo"
                        android:textColor="?attr/customColorText"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:transitionName="nama" />

                    <TextView
                        android:id="@+id/detail_created"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:text="@string/_00_00_00"
                        android:textColor="?attr/customColorText"
                        android:textSize="16sp"
                        android:transitionName="created" />

                </LinearLayout>

                <TextView
                    android:id="@+id/detail_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:text="@string/title_start"
                    android:textColor="?attr/customColorText"
                    android:textSize="18sp"
                    android:transitionName="description" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:transitionName="image"
                    card_view:cardCornerRadius="16dp"
                    card_view:cardPreventCornerOverlap="false">

                    <ImageView
                        android:id="@+id/detail_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/todo"
                        android:maxWidth="300dp"
                        android:scaleType="centerCrop"
                        tools:ignore="ImageContrastCheck"
                        tools:src="@tools:sample/avatars" />
                </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>
</ScrollView>

